Safe to put it inside an allprojects block